service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-shop-service
spec:
  type: ClusterIP

  selector:
    app: coffee-shop

  ports:
    - port: 80
      targetPort: 3000
