ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-shop-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: coffee.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-shop-service
                port:
                  number: 80
